<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.gavaghan</groupId>
    <artifactId>gavaghan-commons</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <name>gavaghan-commons</name>
    <description></description>
    <url>http://maven.apache.org</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Mike Gavaghan</name>
            <email>mike@gavaghan.org</email>
            <organization>Mike Gavaghan</organization>
            <organizationUrl>http://www.gavaghan.org/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/mgavaghan/gavaghan-commons.git</connection>
        <developerConnection>scm:git:ssh://github.com:mgavaghan/gavaghan-commons.git</developerConnection>
        <url>http://github.com/mgavaghan/gavaghan-commons/tree/master</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <additionalparam>-Xdoclint:none</additionalparam>
    </properties>

    <distributionManagement>
        <repository>
            <id>gavaghan-org-repository</id>
            <url>ftp://ftp.gavaghan.org/maven</url>
        </repository>
        <site>
            <id>gavaghan-org-projects</id>
            <url>ftp://ftp.gavaghan.org/projects/gavaghan-commons</url>
        </site>
    </distributionManagement>

    <build>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ftp</artifactId>
                <version>3.5.2</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>19</source>
                    <target>19</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>23.0.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <show>protected</show>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>